--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,16 @@ p{
   font-family: fantasy;
   font-size: 30px;
 }
+.hed{
+font-size: 20px;
+color: #628E90;
+  font-family: fantasy;
+}
+.hed1{
+font-size: 20px;
+color: #628E90;
+  font-family: fantasy;
+}
   body 
     {
       
