--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,9 @@ h3{
   text-align: center;
   font-family: fantasy;
 }
+h3 :hover{
+  color: crimson;
+}
 .boom:hover{
   color: rgb(255, 17, 136);
 }
@@ -34,14 +37,14 @@ p{
   font-size: 40px;
 }
 .hed{
-font-size: 20px;
+font-size: 30px;
 color: #628E90;
   font-family: fantasy;
 }
 .hed1{
-font-size: 20px;
+font-size: 30px;
 color: #628E90;
-  font-family: fantasy;
+ font-family: fantasy;
 }
   body 
     {
